--- a/Teams/Mellow-United-Nations/index.html
+++ b/Teams/Mellow-United-Nations/index.html
@@ -1,2 +1,15 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>
+index
+</title>
 
 
+</head>
+<body>
+<a href="https://github.com/teitlerj/INF-362-Web-Development-Sandbox-Spring-2013/edit/master/Teams/Mellow-United-Nations/Jose"
+title="suny albany webpage">
+Jose's page!
+</a>
+</body>
