--- a/Teams/Amazing-As/index.html
+++ b/Teams/Amazing-As/index.html
@@ -4,7 +4,7 @@
   <body>
     <a href="adam.html">Adam's Page</a>
     <br>
-    <a href="josh.html">Josh's Page</a>
+    <a href="Josh.html">Josh's Page</a>
     <br>
     <a href="kenny.html">Kenny's Page</a>
     <br>
