--- a/Teams/Mellow-United-Nations/index.html
+++ b/Teams/Mellow-United-Nations/index.html
@@ -28,6 +28,10 @@ M's page
 title="suny albany webpage">
 Matt's page
 </a>
+<a href="https://github.com/teitlerj/INF-362-Web-Development-Sandbox-Spring-2013/edit/master/Teams/Mellow-United-Nations/JeremyPage.html"
+title="suny albany webpage">
+Jeremy's page
+</a>
 
 </body>
 </html>
