--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
+
+  <head>
+      <title>Eclectic A-Team</title>
+  </head>
+  
+  
+  <body>
+    <center>
+      <a href="" style="padding-left:10px;padding-right:10px">Link 1</a>
+      <a href="" style="padding-left:10px;padding-right:10px">Link 2</a>
+      <a href="" style="padding-left:10px;padding-right:10px">Link 3</a>
+      <a href="" style="padding-left:10px;padding-right:10px">Link 4</a>
+      <a href="" style="padding-left:10px;padding-right:10px">Link 5</a>
+      <a href="" style="padding-left:10px;padding-right:10px">Link 6</a>
+    </center>
+  </body>
 
 
+</html>
