--- a/Teams/Mellow-United-Nations/index.html
+++ b/Teams/Mellow-United-Nations/index.html
@@ -8,7 +8,7 @@ index
 
 </head>
 <body>
-<a href="https://github.com/teitlerj/INF-362-Web-Development-Sandbox-Spring-2013/edit/master/Teams/Mellow-United-Nations/Jose"
+<a href="https://github.com/teitlerj/INF-362-Web-Development-Sandbox-Spring-2013/edit/master/Teams/Mellow-United-Nations/Jose.html"
 title="suny albany webpage">
 Jose's page!
 </a>
