--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -2,17 +2,26 @@
 
   <head>
       <title>Eclectic A-Team</title>
+      <style type="text/css">
+         .pad{
+            padding-left:10px;padding-right:10px
+         }
+      </style>
   </head>
   
   
   <body>
     <center>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 1</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 2</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 3</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 4</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 5</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 6</a>
+      <h1></h1>
+      <br/>
+      <h2>Welcome to our page!</h2>
+      <br/><br/><br/>
+      <a href="" class="pad">Dominic</a>
+      <a href="" class="pad">Kelly</a>
+      <a href="" class="pad">Cody</a>
+      <a href="" class="pad">Link 4</a>
+      <a href="" class="pad">Link 5</a>
+      <a href="" class="pad">Link 6</a>
     </center>
   </body>
 
