--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -16,7 +16,7 @@
       <br/>
       <h2>Welcome to our page!</h2>
       <br/><br/><br/>
-      <a href="" class="pad">Dominic</a>
+      <a href="dom.html" class="pad">Dominic</a>
       <a href="" class="pad">Kelly</a>
       <a href="" class="pad">Cody</a>
       <a href="" class="pad">Link 4</a>
