--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -12,7 +12,7 @@
   
   <body>
     <center>
-      <h1></h1>
+      <h1>Eclectic A-Team</h1>
       <br/>
       <h2>Welcome to our page!</h2>
       <br/><br/><br/>
