--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -19,9 +19,9 @@
       <a href="dom.html" class="pad">Dominic</a>
       <a href="" class="pad">Kelly</a>
       <a href="" class="pad">Cody</a>
-      <a href="" class="pad">Link 4</a>
-      <a href="" class="pad">Link 5</a>
-      <a href="" class="pad">Link 6</a>
+      <a href="" class="pad">David</a>
+      <a href="" class="pad">Johnny</a>
+      <a href="" class="pad">William</a>
     </center>
   </body>
 
