--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -18,7 +18,7 @@
       <br/><br/><br/>
       <a href="dom.html" class="pad">Dominic</a>
       <a href="" class="pad">Kelly</a>
-      <a href="" class="pad">Cody</a>
+      <a href="cody.html" class="pad">Cody</a>
       <a href="" class="pad">David</a>
       <a href="" class="pad">Johnny</a>
       <a href="" class="pad">William</a>
