--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-
+<html>
   <head>
       <title>Eclectic A-Team</title>
+      <style type="text/css">
+         .pad{
+            padding-left:10px;padding-right:10px
+         }
+      </style>
   </head>
   
   
   <body>
     <center>
-      <a href="" style="padding-left:10px;padding-right:10px">Dominic</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Kelly</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Cody</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 4</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 5</a>
-      <a href="" style="padding-left:10px;padding-right:10px">Link 6</a>
+      <h1>Eclectic A-Team</h1>
+      <br/>
+      <h2>Welcome to our page!</h2>
+      <br/><br/><br/>
+      <a href="dom.html" class="pad">Dominic</a>
+      <a href="" class="pad">Kelly</a>
+      <a href="cody.html" class="pad">Cody</a>
+      <a href="" class="pad">David</a>
+      <a href="" class="pad">Johnny</a>
+      <a href="" class="pad">William</a>
     </center>
   </body>
 
