--- a/Teams/Eclectic-A-Team/cody.html
+++ b/Teams/Eclectic-A-Team/cody.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>Cody's Page</title>
   </head>
   
   <body>
-    
+    <h1>Welcom to my page!</h1>
   </body>
 
 
