--- a/Teams/Yummy-Tacos/index.html
+++ b/Teams/Yummy-Tacos/index.html
@@ -1,5 +1,12 @@
 <html>
   <head>
-    <title></title>
+    <title>Yummy Tacos' first page for INF362</title>
   </head>
+  <body>
+    <ul>
+      <li>/* Jie - please insert you link here and remove this after youre done <a></a> */</li>
+      <li>/* Jarret - please insert you link here and remove this after youre done <a></a> */</li>
+      <li><a href = "https://gist.github.com/4678936">This is Zoonash's page!</a></li>
+    </ul>
+  </body>
 </html>
