--- a/Teams/Eclectic-A-Team/cody.html
+++ b/Teams/Eclectic-A-Team/cody.html
@@ -6,7 +6,22 @@
   </head>
   
   <body>
-    <h1>Welcom to my page!</h1>
+    <a href="index.html">Home</a>
+    <br/>
+    <h1>Welcome to my page!</h1><br/>
+    <p>
+      <h2>Preferred Teaching Methods:</h2><br/>
+      <ul>
+        <li>Hands-On Activities</li>
+        <li>Regular Homework: Practicing material taught in lecture</li>
+        
+      </ul><br/>
+      <h2>Discouraged Teaching Methods</h2>
+      <ul>
+        <li>Graded Pop-Quizzes: They don't help learning at all, it makes
+          students feel bad that they don't know certain things.</li>
+      </ul>
+    </p>
   </body>
 
 
