--- a/Teams/Eclectic-A-Team/cody.html
+++ b/Teams/Eclectic-A-Team/cody.html
@@ -6,17 +6,19 @@
   </head>
   
   <body>
-    <a href="index.html">Home</a>
     <br/>
-    <h1>Welcome to my page!</h1><br/>
+    <div style="text-align:center">
+      <h1>Cody's Page</h1>
+      <a href="index.html" title="Click here to go back to the links page">Home</a>
+    </div>
     <p>
-      <h2>Preferred Teaching Methods:</h2><br/>
+      <h3>Preferred Teaching Methods:</h3>
       <ul>
         <li>Hands-On Activities</li>
         <li>Regular Homework: Practicing material taught in lecture</li>
         
       </ul><br/>
-      <h2>Discouraged Teaching Methods</h2>
+      <h3>Discouraged Teaching Methods</h3>
       <ul>
         <li>Graded Pop-Quizzes: They don't help learning at all, it makes
           students feel bad that they don't know certain things.</li>
