--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -11,18 +11,21 @@
   
   
   <body>
-    <center>
+    <div style="text-align:center">
       <h1>Eclectic A-Team</h1>
       <br/>
-      <h2>Welcome to our page!</h2>
+      <h3>Welcome to our page!</h3>
       <br/><br/><br/>
+      <p>
+        Click on a link below to be taken to the respective group members page!
+      </p>
       <a href="dom.html" class="pad">Dominic</a>
       <a href="" class="pad">Kelly</a>
       <a href="cody.html" class="pad">Cody</a>
       <a href="" class="pad">David</a>
       <a href="" class="pad">Johnny</a>
       <a href="" class="pad">William</a>
-    </center>
+    </div>
   </body>
 
 
