--- a/Teams/Amazing-As/index.html
+++ b/Teams/Amazing-As/index.html
@@ -2,17 +2,17 @@
   <head>
   </head>
   <body>
-    <a href="adam.html">Adam's Page</a>
+    <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/adam.html">Adam's Page</a>
     <br>
-    <a href="Josh.html">Josh's Page</a>
+    <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/Josh.html">Josh's Page</a>
     <br>
-    <a href="kenny.html">Kenny's Page</a>
+    <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/kenny.html">Kenny's Page</a>
     <br>
-    <a href="cat.html">Cat's Page</a>
+    <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/cat.html">Cat's Page</a>
     <br>
-    <a href="greg.html">Greg's Page</a>
+    <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/greg.html">Greg's Page</a>
     <br>
-    <a href="mike.html">Mike's Page</a>
+    <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/mike.html">Mike's Page</a>
 
 
   </body>
