--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -24,7 +24,7 @@
       <a href="cody.html" class="pad">Cody</a>
       <a href="" class="pad">David</a>
       <a href="" class="pad">Johnny</a>
-      <a href="" class="pad">William</a>
+      <a href="William_Wade.html" class="pad">William</a>
     </div>
   </body>
 
