--- a/Teams/PRO-2013/index.html
+++ b/Teams/PRO-2013/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-<p><a href=""></a></p>
-<p><a href=""></a></p>
+<p><a href="assign1_ap.html">Anthony Phillips</a></p>
+<p><a href="assign1_yk.html">Yul Kim</a></p>
 <p><a href=""></a></p>
 <p><a href=""></a></p>
 <p><a href=""></a></p>
