--- a/Teams/PRO-2013/index.html
+++ b/Teams/PRO-2013/index.html
@@ -8,8 +8,8 @@
 <body>
 <p><a href="assign1_ap.html">Anthony Phillips</a></p>
 <p><a href="assign1_yk.html">Yul Kim</a></p>
-<p><a href=""></a></p>
-<p><a href=""></a></p>
+<p><a href="assign1_ec.html">EC</a></p>
+<p><a href="">Sauron</a></p>
 <p><a href=""></a></p>
 <p><a href=""></a></p>
 <p><a href=""></a></p>
