--- a/Teams/Eclectic-A-Team/jmjjr_in_class_assign_one.html
+++ b/Teams/Eclectic-A-Team/jmjjr_in_class_assign_one.html
@@ -1,7 +1,7 @@
 <doctype !html>
 <html>
 <head>
-<title>Johnny's In Class Assignment One</title
+<title>Johnny's In Class Assignment One</title>
 </head>
 <body>
 <h1>Johnny's In Class Assignment Week One<h1>
@@ -13,5 +13,7 @@ to learn.  I am not saying I cannot learn other ways; this is just my preferred 
 <p>My discouraged practices in learning would have to be reading from a textbook or just listening to a professor lecture
 all evening long. It is very discouraging because I get bored easily and I end up wanting to fall alseep.</p>
 
-<body>
+<a href="index.html">Home</a>
+
+</body>
 </html>
