--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -23,7 +23,7 @@
       <a href="Kelly" class="pad">Kelly</a>
       <a href="cody.html" class="pad">Cody</a>
       <a href="" class="pad">David</a>
-      <a href="" class="pad">Johnny</a>
+      <a href="jmjjr_in_class_assign_one.html" class="pad">Johnny</a>
       <a href="William_Wade.html" class="pad">William</a>
     </div>
   </body>
