--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -20,7 +20,7 @@
         Click on a link below to be taken to the respective group members page!
       </p>
       <a href="dom.html" class="pad">Dominic</a>
-      <a href="Kelly" class="pad">Kelly</a>
+      <a href="Kelly.html" class="pad">Kelly</a>
       <a href="cody.html" class="pad">Cody</a>
       <a href="" class="pad">David</a>
       <a href="" class="pad">Johnny</a>
