--- a/Teams/Amazing-As/index.html
+++ b/Teams/Amazing-As/index.html
@@ -4,7 +4,7 @@
   <body>
     <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/adam.html">Adam's Page</a>
     <br>
-    <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/Josh.html">Josh's Page</a>
+    <a href="Teams/Amazing-As/Josh.html">Josh's Page</a>
     <br>
     <a href="https://github.com/SUNY-Albany-CCI/INF-362-Web-Development-Sandbox-Spring-2013/blob/master/Teams/Amazing-As/kenny.html">Kenny's Page</a>
     <br>
