--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -22,7 +22,7 @@
       <a href="dom.html" class="pad">Dominic</a>
       <a href="Kelly" class="pad">Kelly</a>
       <a href="cody.html" class="pad">Cody</a>
-      <a href="" class="pad">David</a>
+      <a href="Daivd's webpage" class="pad">David</a>
       <a href="jmjjr_in_class_assign_one.html" class="pad">Johnny</a>
       <a href="William_Wade.html" class="pad">William</a>
     </div>
