--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -19,7 +19,7 @@
       <p>
         Click on a link below to be taken to the respective group members page!
       </p>
-      <a href="dom.html" class="pad">Dominic</a>
+      <a href="dom.html" class="pad">Dominick</a>
       <a href="Kelly" class="pad">Kelly</a>
       <a href="cody.html" class="pad">Cody</a>
       <a href="Daivd's webpage" class="pad">David</a>
