--- a/Teams/Eclectic-A-Team/Kelly.html
+++ b/Teams/Eclectic-A-Team/Kelly.html
@@ -8,7 +8,10 @@
 INF362 - Intermediate Web Development
 <br>
 Team: The Eclectic A's
+<br>
+<br>
+<br>
+<a href="index.html">Home</a>
 </p>
-
 </body>
 </html>
