--- a/Teams/Mellow-United-Nations/MattCollinspage.html
+++ b/Teams/Mellow-United-Nations/MattCollinspage.html
@@ -1,10 +1,10 @@
-<!doctype>
+<!doctype html>
 <html>
 <head>
-  
-  </head>
-  <body>
+<title>Title</title>
 </head>
+<body>
 <p>This is my page.</p>
 </body>
 </html>
+
