--- a/Teams/PRO-2013/Sarun_Ducks_Facts.html
+++ b/Teams/PRO-2013/Sarun_Ducks_Facts.html
@@ -8,7 +8,7 @@
 
 body
 {
-background-color:#b0c4de;
+background-image:url('http://img132.imageshack.us/img132/665/smileyicongifs671.gif');
 }
 
 IMG.footer {
