--- a/Teams/Mellow-United-Nations/index.html
+++ b/Teams/Mellow-United-Nations/index.html
@@ -13,7 +13,7 @@ Jose's page!
 title="suny albany webpage">
 Mike's page
 </a>
-<a href="kirstine.html"
+<a href="Kirstine.html"
 title="suny albany webpage">
 Kirstine's page
 </a>
