Added index file and completed adding another marker to the map

--- a/Teams/Amazing-As/Activities/HTML5-Javascript/location.html
+++ b/Teams/Amazing-As/Activities/HTML5-Javascript/location.html
@@ -9,8 +9,10 @@ src="http://maps.google.com/maps/api/staticmap?
 &size=900x300
 &sensor=false
 &maptype=roadmap
-&markers=color:green|label:A|145+Wolf+Rd.+Colonie+NY+12205">
+&markers=color:green|label:A|145+Wolf+Rd.+Colonie+NY+12205
+&markers=color:red|label:B|6+South+Lake+Albany+NY+12203">
 </div>
+
 </body>
 </html>
 
