--- a/Teams/Amazing-As/Activities/HTML5-Javascript/photo-gallery.html
+++ b/Teams/Amazing-As/Activities/HTML5-Javascript/photo-gallery.html
@@ -19,6 +19,8 @@
 <div id="images">
 <img src="images/Japan1_Thumb.jpg"
 data-large="images/Japan1.JPG" alt="A tea pot">
+<img src="http://1.bp.blogspot.com/-1uQRYMklACU/ToQ6aL-5uUI/AAAAAAAAAgQ/9_u0922cL14/s1600/cute-puppy-dog-wallpapers.jpg" alt="Adding dog image"
+width="200" height="250">
 </div>
 
 <div id="preview">
