Added new index

--- a/Teams/Amazing-As/Activities/HTML5-Javascript/index.html
+++ b/Teams/Amazing-As/Activities/HTML5-Javascript/index.html
@@ -3,6 +3,12 @@
 <head>
 </head>
 <body>
-<p>I Am HEREEE</p>
+<a href ="contact-us.html">Contact us</a>
+<a href ="photo-gallery.html">Photo-Gallery</a>
+<a href ="location.html">Location</a>
+<a href ="samples.html">Samples</a>
+<a href ="style.css">Style</a>
+<a href ="application.js">Application</a>
+<a href ="about.html">About</a>
 </body>
 </html>
