Added new index

--- a/Teams/Amazing-As/Activities/HTML5-Javascript/index.html
+++ b/Teams/Amazing-As/Activities/HTML5-Javascript/index.html
@@ -3,12 +3,17 @@
 <head>
 </head>
 <body>
-<a href ="contact-us.html">Contact us</a>
-<a href ="photo-gallery.html">Photo-Gallery</a>
-<a href ="location.html">Location</a>
-<a href ="samples.html">Samples</a>
-<a href ="style.css">Style</a>
-<a href ="application.js">Application</a>
-<a href ="about.html">About</a>
+<div id = "menu">
+<ul>
+
+<li><a href ="contact-us.html">Contact us</a></li>
+<li><a href ="photo-gallery.html">Photo-Gallery</a></li>
+<li><a href ="location.html">Location</a></li>
+<li><a href ="samples.html">Samples</a></li>
+<li><a href ="style.css">Style</a></li>
+<li><a href ="application.js">Application</a></li>
+<li><a href ="about.html">About</a></li>
+</ul>
+</div>
 </body>
 </html>
