New Input type for assignment

--- a/Teams/Amazing-As/Activities/HTML5-Javascript/contact-us.html
+++ b/Teams/Amazing-As/Activities/HTML5-Javascript/contact-us.html
@@ -42,6 +42,9 @@
 <li>
 <input type="submit" value="Submit">
 </li>
+<li>
+<input type="search" name="search" id="search">
+</li>
 </ol>
 
 </fieldset>
