fixing the link in the index to point to activities

--- a/Teams/Amazing-As/index.html
+++ b/Teams/Amazing-As/index.html
@@ -10,7 +10,7 @@
 
 <center><a href="Dog Website/index.html">Dog Website</a></center>
 <center><a href="Learning Github/index.html">Learning Github</a></center>
-<center><a href="Activities/contact-us.html">Activities</a></center>
+<center><a href="Activities/HTML5-JavaScript/contact-us.html">Activities</a></center>
 
 <br>
 <br>
