--- a/Teams/Amazing-As/index.html
+++ b/Teams/Amazing-As/index.html
@@ -10,6 +10,7 @@
 
 <center><a href="Dog Website/index.html">Dog Website</a></center>
 <center><a href="Learning Github/index.html">Learning Github</a></center>
+<center><a href="Activities/index.html">Activities</a></center>
 
 <br>
 <br>
