Add my new file

--- a/Teams/Amazing-As/Activities/HTML5-Javascript/samples.html
+++ b/Teams/Amazing-As/Activities/HTML5-Javascript/samples.html
@@ -23,5 +23,17 @@
 </article>
 
 </div>
+
+<div id="video-content>
+<article class="sample">
+<header><h2>Video Sample</h2></header>
+<video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
+</article>
+
+</div>
 </body>
 </html>
