Modifying index file to link to assignments

--- a/Assignments/index.html
+++ b/Assignments/index.html
@@ -1,17 +1,16 @@
 <html>
 
 <head>
-<title>INF-362 Web Development Course</title>
+<title>INF-362 Web Development Course Assignments</title>
 </head>
 
 <body>
 
 <center><h1>INF-362 Web Development Course</h1></center>
 
-<center><a href="Teams/index.html">SUNY INF-362 HTML5 Projects</a></center>
-<center><a href="Assignments/index.html">SUNY INF-362 Assignments</a></center>
+<center><a href="A_Houck/index.html">Adam Houck </a></center>
+<center><a href="Sarun_Sangchanintra/indext.html">Sarun Sangchanintra</a></center>
 
-<center><img src="http://opensource.org/files/osi_symbol.png" alt="The Symbol" width="480" height="406" border="0" /></center>
 
 <br>
 <br>
@@ -20,4 +19,3 @@
 </center>
 
 </body></html>
-
