--- a/Teams/Amazing-As/Dog Website/index.html
+++ b/Teams/Amazing-As/Dog Website/index.html
@@ -1,7 +1,82 @@
 <!DOCTYPE HTML>
 <html>
-<body>
-Dog Website
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Amazing A's Dogs</title>
+<style type="text/css">
 
+body
+{
+  
+background-image:url("bg.png");
+background-repeat:repeat;
+}
+#sideBar {
+	float: left;
+	width: 22%;
+	margin-left: 62px;
+}
+#Content {
+	float: left;
+	width: 63%;
+	margin-left: 20px;
+}
+
+.container {
+	width: 960px;
+	height: auto;
+	margin-top: 0;
+	margin-right: auto;
+	margin-bottom: 0;
+	margin-left: auto;
+}
+
+#header {
+	margin-left: 62px;
+}
+
+#NavBar {
+	margin-top: 0px;
+	margin-left: 75px;
+}
+
+.description {
+  color: #fff;
+}
+
+.descriptionh {
+  color: #fff;
+}
+
+
+</style>
+
+</head>
+
+<body>
+<div class="container">
+  <div id="header">
+    <p><img src="header.png" alt="header" width="842" height="93" border="0">
+    </p>
+  </div>
+  <div id="sideBar">
+    <p><img src="bone.png" alt="bone" width="167" height="73" hspace="20"></p>
+    <p><img src="bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
+      <map name="Map">
+        <area shape="rect" coords="10,83,197,165" href="GermanShephard">
+        <area shape="rect" coords="10,164,197,244" href="LabRet">
+        <area shape="rect" coords="10,243,197,323" href="CockerSpaniel">
+        <area shape="rect" coords="10,322,197,388" href="shistzu">
+        <area shape="rect" coords="10,387,197,441" href="Pitbull">
+      </map>
+      
+    </p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+  </div>
+  <div id="Content">
+  </div>
+ 
+</div>
 </body>
 </html>
