--- a/Teams/Amazing-As/Dog Website/germanshepard.html
+++ b/Teams/Amazing-As/Dog Website/germanshepard.html
@@ -85,7 +85,7 @@ margin-left: 75px;
       <li><span dir="LTR"> </span>[FACT 6]</li>
     </ul>
     
-    <iframe width="420" height="315" src="-->YOUTUBE LINK<--" frameborder="0" allowfullscreen></iframe>
+    <iframe width="420" height="315" src="http://www.youtube.com/embed/IIjSchJzCoU" frameborder="0" allowfullscreen></iframe>
     
     <h1 class="descriptionh">Why is it your favorite dog?</h1>
     <p class="description">PARAGRAPH EXPLANING WHY</p>
