--- a/Teams/Amazing-As/Dog Website/index.html
+++ b/Teams/Amazing-As/Dog Website/index.html
@@ -12,32 +12,32 @@ background-image:url("bg.png");
 background-repeat:repeat;
 }
 #sideBar {
-	float: left;
-	width: 22%;
-	margin-left: 62px;
+float: left;
+width: 22%;
+margin-left: 62px;
 }
 #Content {
-	float: left;
-	width: 63%;
-	margin-left: 20px;
+float: left;
+width: 63%;
+margin-left: 20px;
 }
 
 .container {
-	width: 960px;
-	height: auto;
-	margin-top: 0;
-	margin-right: auto;
-	margin-bottom: 0;
-	margin-left: auto;
+width: 960px;
+height: auto;
+margin-top: 0;
+margin-right: auto;
+margin-bottom: 0;
+margin-left: auto;
 }
 
 #header {
-	margin-left: 62px;
+margin-left: 62px;
 }
 
 #NavBar {
-	margin-top: 0px;
-	margin-left: 75px;
+margin-top: 0px;
+margin-left: 75px;
 }
 
 .description {
@@ -48,8 +48,35 @@ background-repeat:repeat;
   color: #fff;
 }
 
-
+#div1 {
+	width:200px;
+	height:200px;
+	padding:10px;
+	border:1px solid #aaaaaa;
+	float: right;
+}
 </style>
+
+<script>
+function allowDrop(ev)
+{
+ev.preventDefault();
+}
+
+function drag(ev)
+{
+ev.dataTransfer.setData("Text",ev.target.id);
+}
+
+function drop(ev)
+{
+ev.preventDefault();
+var data=ev.dataTransfer.getData("Text");
+ev.target.appendChild(document.getElementById(data));
+}
+</script>
+
+
 
 </head>
 
@@ -75,6 +102,17 @@ background-repeat:repeat;
     <p>&nbsp;</p>
   </div>
   <div id="Content">
+  
+  <p>Which dog out of the Amazing A's favorite dogs is your favorite dog? Drag and drop below!</p>
+
+<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+<br>
+<img src="dog1.jpg" name="drag1" width="200" height="200" vspace="10" id="drag1" draggable="true" ondragstart="drag(event)">
+<img id="drag2" src="dog2.jpg" draggable="true" ondragstart="drag(event)" width="200" height="200">
+<img src="dog3.jpg" name="drag3" width="200" height="200" hspace="100" vspace="10" id="drag3" draggable="true" ondragstart="drag(event)">
+<img src="dog4.jpeg" name="drag4" width="200" height="200" vspace="20" id="drag4" draggable="true" ondragstart="drag(event)">
+<img src="dog5.jpeg" name="drag5" width="200" height="200" hspace="100" vspace="20" id="drag5" draggable="true" ondragstart="drag(event)">
+  
   </div>
  
 </div>
