Add my new file.

--- a/Teams/Amazing-As/Activities/HTML5-Javascript/samples.html
+++ b/Teams/Amazing-As/Activities/HTML5-Javascript/samples.html
@@ -26,11 +26,9 @@
 
 <div id="video-content>
 <article class="sample">
-<header><h2>Video Sample</h2></header>
-<video width="320" height="240" controls>
-  <source src="movie.mp4" type="video/mp4">
-  <source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
+<header><h2>Music Production</h2></header>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/w9V2MqHl0aw?html5=1" 
+	frameborder="0" allowfullscreen></iframe>
 </video>
 </article>
 
