--- a/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/contact-us.html
+++ b/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/contact-us.html
@@ -5,6 +5,7 @@
 <head>
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
+<title>contact-us</title>
 <body>
 
  <div id="menu" type="toolbar">
