--- a/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/location.html
+++ b/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/location.html
@@ -2,6 +2,7 @@
 -->
 <!DOCTYPE HTML>
 <html>
+<title>location</title>
 <body>
 <div id="location">
 <img id="map" alt="Map of Our Music Store locations"
