--- a/Teams/Yummy-Tacos/Activities/HTML5-Javascript/samples.html
+++ b/Teams/Yummy-Tacos/Activities/HTML5-Javascript/samples.html
@@ -5,7 +5,7 @@
 <body>
 <div id="audio-content>
 <article class="sample">
-<header><h2>Sample 1</h2></header>
+<header><h2>Yummy Tacos Sample</h2></header>
 <audio id="Sample1" controls>
 <source src="sounds/ogg/sample1.ogg" type="audio/ogg">
 <source src="sounds/mp3/Kalimba.mp3" type="audio/mpeg">
