Added new location

--- a/Teams/Eclectic-A-Team/Activities/HTML5-Javascript/location.html
+++ b/Teams/Eclectic-A-Team/Activities/HTML5-Javascript/location.html
@@ -9,7 +9,7 @@ src="http://maps.google.com/maps/api/staticmap?
 &size=900x300
 &sensor=false
 &maptype=roadmap
-&markers=color:green|label:A|145+Wolf+Rd.+Colonie+NY+12205">
+&markers=color:green|label:A|1+West+Ave..+Saratoga Springs+NY+12866">
 </div>
 </body>
 </html>
