--- a/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/location.html
+++ b/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/location.html
@@ -10,8 +10,8 @@ src="http://maps.google.com/maps/api/staticmap?
 &size=900x300
 &sensor=false
 &maptype=roadmap
-&markers=color:green|label:A|145+Wolf+Rd.+Colonie+NY+12205">
+&markers=color:blue|label:A|145+Wolf+Rd.+Colonie+NY+12205
+&markers=color:green|label:B|173+Quail+Street+Albany+NY+12203">
 </div>
 </body>
 </html>
-
