updating samples.html

--- a/Teams/Eclectic-A-Team/Activities/HTML5-Javascript/samples.html
+++ b/Teams/Eclectic-A-Team/Activities/HTML5-Javascript/samples.html
@@ -20,6 +20,13 @@
 <source src="sounds/mp3/Maid-with-the-Flaxen-Hair.mp3" type="audio/mpeg">
 <a href="sounds/mp3/Maid-with-the-Flaxen-Hair.mp3">Download Maid-with-the-Flaxen-Hair.mp3</a>
 </audio>
+
+<div id="video-content">
+<header><h3>Sample 3</h3></header>
+<iframe width="420" height="345"
+src="www.youtube.com/watch?v=9bZkp7q19f0"
+</iframe>
+</video>
 </article>
 
 </div>
