--- a/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/index.html
+++ b/Teams/Mellow-United-Nations/Activities/HTML5-Javascript/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <center><a href="contact-us.html">contact us</a></center>
+<center><a href="photo-gallery.html">photo gallery</a></center>
 
 <br>
 <br>
