Changing the index file to link to project one.

--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -16,6 +16,8 @@
       <br/>
       <h3>Welcome to our page!</h3>
       <br/><br/><br/>
+      <p>Click on link below to be taken to Project One.</p>
+      <a href="Project_One/index.html">Projection One</a>
       <p>
         Click on a link below to be taken to the respective group members page!
       </p>
