Fixed spelling on geolocation link; formatted links; added Activities link

--- a/Teams/Eclectic-A-Team/Project_One/index.html
+++ b/Teams/Eclectic-A-Team/Project_One/index.html
@@ -14,8 +14,12 @@
     <div style="text-align:center">
       <h1>Eclectic A-Team Project One</h1>
       <br/>
-      <a href="gelocation.html">Geolocation</a>
-      <a href="music_player.html">Music Player</a>	
+	  <p>
+		Here are our current projects we are working on:
+	  </p>
+      <a href="geolocation.html" class="pad">Geolocation</a>
+      <a href="music_player.html" class="pad">Music Player</a>
+	  <a href="./Activities/index.html" class="pad">Activities</a>	  
       <br/><br/><br/>
       <p>
         Click on a link below to be taken to the respective group members page!
@@ -28,7 +32,7 @@
       <a href="jmjjr_in_class_assign_one.html" class="pad">Johnny</a>
     </div>
     <p>
-	<a href="./Activities/index.html>Activities</a>
+	<a href="./Activities/index.html">Activities</a>
     </p>
   </body>
 
