Fix activities link

--- a/Teams/Eclectic-A-Team/index.html
+++ b/Teams/Eclectic-A-Team/index.html
@@ -17,7 +17,7 @@
       <h3>Welcome to our page!</h3>
       <br/><br/><br/>
       <p>Click on link below to be taken to Project One.</p>
-      <a href="Project_One/index.html">Projection One</a>
+      <a href="Project_One/index.html">Project One</a>
       <p>
         Click on a link below to be taken to the respective group members page!
       </p>
@@ -29,7 +29,7 @@
       <a href="jmjjr_in_class_assign_one.html" class="pad">Johnny</a>
     </div>
     <p>
-	<a href="./Activities/index.html>Activities</a>
+	<a href="./Activities/index.html" class="pad">Activities</a>
     </p>
   </body>
 
