the iframes for the youtube videos are actually the old version of HTML.  Also took out the inpage css and put it into an external style sheet.

--- a/Teams/Amazing-As/Dog Website/cockerspaniel.html
+++ b/Teams/Amazing-As/Dog Website/cockerspaniel.html
@@ -1,11 +1,52 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title></title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Amazing A's Dogs</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-
-<p>This is the base file for where I will create my portion of the dog website project once we get the template completed.
-
+<div class="container">
+  <div id="header">
+    <p><img src="header.png" alt="header" width="842" height="93" border="0">
+    </p>
+  </div>
+  <div id="sideBar">
+    <p><img src="bone.png" alt="bone" width="167" height="73" hspace="20"></p>
+    <p><img src="bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
+      <map name="Map">
+        <area shape="rect" coords="10,83,197,165" href="germanshephard.html">
+        <area shape="rect" coords="10,164,197,244" href="labret.html">
+        <area shape="rect" coords="10,243,197,323" href="cockerspaniel.html">
+        <area shape="rect" coords="10,322,197,388" href="shistzu.html">
+        <area shape="rect" coords="10,387,197,441" href="pitbull.html">
+      </map>
+    </p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+  </div>
+  <div id="Content">
+    <h1> Fun Facts about Cocker Spaniel's: </h1>
+    <ul>
+      <li><span dir="LTR"> </span>[FACT 1]</li>
+      <li><span dir="LTR"> </span>[FACT 2]</li>
+      <li><span dir="LTR"> </span>[FACT 3]</li>
+      <li><span dir="LTR"> </span>[FACT 4]</li>
+      <li><span dir="LTR"> </span>[FACT 5]</li>
+      <li><span dir="LTR"> </span>[FACT 6]</li>
+    </ul>
+	
+	<video width="320" height="240" controls autoplay="autoplay">
+		<source src="videos/cocker.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
+    
+    <h1 class="descriptionh">Why is it your favorite dog?</h1>
+    <p class="description">PARAGRAPH EXPLANING WHY</p>
+    
+  </div>
+ 
+</div>
 </body>
 </html>
