--- a/Teams/Amazing-As/Dog Website/template.html
+++ b/Teams/Amazing-As/Dog Website/template.html
@@ -3,53 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Amazing A's Dogs</title>
-<style type="text/css">
-
-body
-{
-  
-background-image:url("bg.png");
-background-repeat:repeat;
-}
-#sideBar {
-	float: left;
-	width: 22%;
-	margin-left: 62px;
-}
-#Content {
-	float: left;
-	width: 63%;
-	margin-left: 20px;
-}
-
-.container {
-	width: 960px;
-	height: auto;
-	margin-top: 0;
-	margin-right: auto;
-	margin-bottom: 0;
-	margin-left: auto;
-}
-
-#header {
-	margin-left: 62px;
-}
-
-#NavBar {
-	margin-top: 0px;
-	margin-left: 75px;
-}
-
-.description {
-  color: #fff;
-}
-
-.descriptionh {
-  color: #fff;
-}
-
-
-</style>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
@@ -75,7 +29,7 @@ background-repeat:repeat;
     <p>&nbsp;</p>
   </div>
   <div id="Content">
-    <<h1> Fun Facts about [YOUR DOG NAME]: </h1>
+    <h1> Fun Facts about [YOUR DOG NAME]: </h1>
     <ul>
       <li><span dir="LTR"> </span>[FACT 1]</li>
       <li><span dir="LTR"> </span>[FACT 2]</li>
@@ -84,8 +38,10 @@ background-repeat:repeat;
       <li><span dir="LTR"> </span>[FACT 5]</li>
       <li><span dir="LTR"> </span>[FACT 6]</li>
     </ul>
-    
-    <iframe width="420" height="315" src="-->YOUTUBE LINK<--" frameborder="0" allowfullscreen></iframe>
+    <!-- iframe is old html, 'embed' is the new html5 stuff, <iframe width="420" height="315" src="--YOUTUBE LINK--" frameborder="0" allowfullscreen></iframe>-->
+    <!-- It is best just to get the embeded code from youtube as long as it isnt an iframe -->
+	<embed width="420" height="315" src="youtube url here" type="application/x-shockwave-flash">
+	</embed>
     
     <h1 class="descriptionh">Why is it your favorite dog?</h1>
     <p class="description">PARAGRAPH EXPLANING WHY</p>
