Moving videos out of the git repository.
The video cocker.mp4 was moved to /var/www/videos

--- a/Teams/Amazing-As/Dog Website/cockerspaniel.html
+++ b/Teams/Amazing-As/Dog Website/cockerspaniel.html
@@ -38,7 +38,7 @@
     </ul>
 	
 	<video width="320" height="240" controls autoplay="autoplay">
-		<source src="videos/cocker.mp4" type="video/mp4">
+		<source src="/videos/cocker.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
     
