--- a/Teams/Mellow-United-Nations/Project-One/HomePage.html
+++ b/Teams/Mellow-United-Nations/Project-One/HomePage.html
@@ -1,11 +1,31 @@
 <!DOCTYPE HTML>
 <html>
+<head>
+<link rel="stylesheet"
+type="text/css"
+href="Project1style.css" />
 <title>
 HomePage
 </title>
+</head>
 <body>
+<div class="div1">
 
-<p>Information about the website (and navigation links) will go here</p>
+<h1>The New York Knicks!</h1>
 
-</body>
-</html> 
+
+<div class="div2">
+
+<div class="div1-1">
+<div class="div1-1-1"><a href="HomePage.html">Home   </a></div>
+<div class="div1-1-1"><a href="Videos.html">   Videos   </a></div>
+<div class="div1-1-1"><a href="Locations.html">   Locations   </a></div>
+<div class="div1-1-1"><a href="Forms.html">   Forms   </a></div>
+</div>
+<br />
+<br />
+<img src="Knicks.jpg"  width="150px" alt="NYknicks" border="0"/>
+<p>This Page is dedicated to following one of the greatest basketball teams in professional basket ball, the New York Knicks! 
+The team was established in 1946 and continues to be a successful team to this date.
+</p>
+</div>
