--- a/Teams/Mellow-United-Nations/Project-One/Videos.html
+++ b/Teams/Mellow-United-Nations/Project-One/Videos.html
@@ -1,11 +1,41 @@
+
 <!DOCTYPE HTML>
 <html>
+<head>
+<link rel="stylesheet"
+type="text/css"
+href="Project1style.css" />
 <title>
 Videos
 </title>
+</head>
 <body>
+<div class="div1">
 
-<p>Video links will go in here</p>
+<h1>Videos</h1>
 
+
+<div class="div2">
+
+<div class="div1-1">
+<div class="div1-1-1"><a href="HomePage.html">Home   </a></div>
+<div class="div1-1-1"><a href="Videos.html">   Videos   </a></div>
+<div class="div1-1-1"><a href="Locations.html">   Locations   </a></div>
+<div class="div1-1-1"><a href="Forms.html">   Forms   </a></div>
+</div>
+<br />
+<br />
+<img src="Knicks.jpg"  width="150px" alt="NYknicks" border="0"/>
+<br />
+<iframe width="400" height="215" src="http://www.youtube.com/embed/Sg2lOGrz6FQ" frameborder="0" allowfullscreen></iframe>
+<iframe width="400" height="215" src="http://www.youtube.com/embed/rxZldI21dzU" frameborder="0" allowfullscreen></iframe>
+<iframe width="400" height="215" src="http://www.youtube.com/embed/twZN1Vqc0eU" frameborder="0" allowfullscreen></iframe>
+<iframe width="400" height="215" src="http://www.youtube.com/embed/EA87PnwQddQ" frameborder="0" allowfullscreen></iframe>
+
+
+
+
+
+</div>
 </body>
-</html> 
+</html>
