--- a/Teams/Amazing-As/Dog Website/index.html
+++ b/Teams/Amazing-As/Dog Website/index.html
@@ -83,12 +83,12 @@ ev.target.appendChild(document.getElementById(data));
 <body>
 <div class="container">
   <div id="header">
-    <p><img src="header.png" alt="header" width="842" height="93" border="0">
+    <p><img src="/images/header.png" alt="header" width="842" height="93" border="0">
     </p>
   </div>
   <div id="sideBar">
-    <p><img src="bone.png" alt="bone" width="167" height="73" hspace="20"></p>
-    <p><img src="bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
+    <p><img src="/images/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
+    <p><img src="/images/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
         <area shape="rect" coords="10,83,197,165" href="GermanShephard">
         <area shape="rect" coords="10,164,197,244" href="LabRet">
