--- a/Teams/Amazing-As/Dog Website/cockerspaniel.html
+++ b/Teams/Amazing-As/Dog Website/cockerspaniel.html
@@ -9,12 +9,12 @@
 <body>
 <div class="container">
   <div id="header">
-    <p><img src="images/header.png" alt="header" width="842" height="93" border="0">
+    <p><img src="/images/header.png" alt="header" width="842" height="93" border="0">
     </p>
   </div>
   <div id="sideBar">
-    <p><img src="images/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
-    <p><img src="images/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
+    <p><img src="/images/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
+    <p><img src="/images/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
         <area shape="rect" coords="10,83,197,165" href="germanshephard.html">
         <area shape="rect" coords="10,164,197,244" href="labret.html">
@@ -29,12 +29,10 @@
   <div id="Content">
     <h1> Fun Facts about Cocker Spaniel's: </h1>
     <ul>
-      <li><span dir="LTR"> </span>[FACT 1]</li>
-      <li><span dir="LTR"> </span>[FACT 2]</li>
-      <li><span dir="LTR"> </span>[FACT 3]</li>
-      <li><span dir="LTR"> </span>[FACT 4]</li>
-      <li><span dir="LTR"> </span>[FACT 5]</li>
-      <li><span dir="LTR"> </span>[FACT 6]</li>
+      <li><span dir="LTR"> </span>There are two branches of cocker’s; the American and English</li>
+      <li><span dir="LTR"> </span>All American dogs are said to originiate from Obo II while his father is the modern sire of the English breed.</li>
+      <li><span dir="LTR"> </span>Prone to ear problems from pendulous ears</li>
+      <li><span dir="LTR"> </span>Bread initially to hunt squirrels or as bird retrievers </li>
     </ul>
 	
 	<video width="320" height="240" controls autoplay="autoplay">
@@ -43,7 +41,9 @@
 	</video>
     
     <h1 class="descriptionh">Why is it your favorite dog?</h1>
-    <p class="description">PARAGRAPH EXPLANING WHY</p>
+    <p class="description">The Cocker Spaniel is my favorite dog as this is the breed of dog that I have.  They are friendly, intelligent, gentile dogs 
+	that make excellent pets.  My dog used to be energetic which was great as kids, we would play with him for hours. Now that he is older, he has become
+	a quiet and lazy lap dog which suits my parents lifestyle perfectly.</p>
     
   </div>
  
