--- a/Teams/Amazing-As/Dog Website/cockerspaniel.html
+++ b/Teams/Amazing-As/Dog Website/cockerspaniel.html
@@ -9,18 +9,18 @@
 <body>
 <div class="container">
   <div id="header">
-    <p><img src="/images/header.png" alt="header" width="842" height="93" border="0">
+    <p><img src="/images/header.png" alt="header" width="842" height="93">
     </p>
   </div>
   <div id="sideBar">
     <p><img src="/images/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
     <p><img src="/images/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
-        <area shape="rect" coords="10,83,197,165" href="germanshephard.html">
-        <area shape="rect" coords="10,164,197,244" href="labret.html">
-        <area shape="rect" coords="10,243,197,323" href="cockerspaniel.html">
-        <area shape="rect" coords="10,322,197,388" href="shistzu.html">
-        <area shape="rect" coords="10,387,197,441" href="pitbull.html">
+        <area shape="rect" coords="10,83,197,165" href="germanshephard.html" alt="German Link">
+        <area shape="rect" coords="10,164,197,244" href="Labrador Retriever.html" alt="Lab Link">
+        <area shape="rect" coords="10,243,197,323" href="cockerspaniel.html" alt="Cocker Link">
+        <area shape="rect" coords="10,322,197,388" href="shistzu.html" alt="Shitzu Link">
+        <area shape="rect" coords="10,387,197,441" href="pitbull.html" alt="Pitbull Link">
       </map>
     </p>
     <p>&nbsp;</p>
@@ -41,9 +41,12 @@
 	</video>
     
     <h1 class="descriptionh">Why is it your favorite dog?</h1>
-    <p class="description">The Cocker Spaniel is my favorite dog as this is the breed of dog that I have.  They are friendly, intelligent, gentile dogs 
+    <p class="description"><article>The Cocker Spaniel is my favorite dog as this is the breed of dog that I have.  They are friendly, intelligent, gentile dogs 
 	that make excellent pets.  My dog used to be energetic which was great as kids, we would play with him for hours. Now that he is older, he has become
-	a quiet and lazy lap dog which suits my parents lifestyle perfectly.</p>
+	a quiet and lazy lap dog which suits my parents lifestyle perfectly.</article></p>
+	<figure><img src="https://dl.dropbox.com/u/23281901/cocker_pic.jpg" alt="Cocker Spaniel" />
+	<figcaption>This is belived to be the main Sire to all modern American Cocker Spaniels</figcaption></figure>
+	
     
   </div>
  
