--- a/Assignments/A_Houck/index.html
+++ b/Assignments/A_Houck/index.html
@@ -4,5 +4,20 @@
 <title>My Portfolio</title>
 </head>
 <body>
+<div id="body">
+
+	<div id="header">
+	My portfolio
+	</div>
+	
+	<div id="content">
+	Flex box 1
+	</div>
+	
+	<div id="sidebar">
+	Flex box 2
+	</div>
+	
+</div>
 </body>
 </html>
