--- a/Teams/Eclectic-A-Team/Portfolios/Cody/cody_work.html
+++ b/Teams/Eclectic-A-Team/Portfolios/Cody/cody_work.html
@@ -20,7 +20,8 @@
 				<h2 style="text-align:center;">Background</h2>
 				<p>
 					All of my work experience has been through internships during my last two years of high school and my first two years of college.
-					Each internship tested the abilities that I acquired through my personal experience and through my education in school. 
+					Each internship tested the abilities that I acquired through my personal experience and through my education in school. Currently 
+					I am employed as a Field Technician for Insight servicing the computer network for Regis Salons.
 				</p><br/><br/>
 				<h2 style="text-align:center;">Internships</h2><br/>
 				<h3>D.A. Collins Construction (<em>Assistant Network Administrator</em>)</h3>
