--- a/Teams/Eclectic-A-Team/Portfolios/Cody/cody_index.html
+++ b/Teams/Eclectic-A-Team/Portfolios/Cody/cody_index.html
@@ -16,15 +16,13 @@
 			</nav>
 			<br/><br/><br/><br/><br/><br/>
 			<div class="content_box">
-				<h2 style="text-align:center;">Welcome to my professional profile!</h2>
+				<h2 style="text-align:center;">Welcome to my portfolio!</h2>
 			
 				<img id="img" alt="Cody Networking" src="./img/Cody_networking.png" class="align-right"/>
 				
 				
 				<p>
-					Welcome to my professional profile, this website contains all the information for you to make an educated decision to hire me for your company.
-					I have organized my website into several sections to make finding content easy. This page contains information about me and the tabs above contain
-					topic-specific material.
+					Welcome to my portfolio, this website contains basic info on my past work-related experience and my current skill set.
 				</p>
 				<br/>
 				<h2>About Me</h2>
