Add portfolio link

--- a/Teams/Eclectic-A-Team/cody.html
+++ b/Teams/Eclectic-A-Team/cody.html
@@ -10,7 +10,8 @@
     
     <div style="text-align:center">
       <h1>Cody's Page</h1>
-      <a href="index.html" title="Click here to go back to the links page">Home</a>
+      <a href="index.html" title="Click here to go back to the links page">Home</a><br/>
+	  <a href="./Portfolios/Cody/cody_index.html" title="Click here to see my portfolio">My Portfolio</a>
     </div>
     
     <p>
