--- a/Teams/Amazing-As/Dog Website/index.html
+++ b/Teams/Amazing-As/Dog Website/index.html
@@ -8,7 +8,7 @@
 body
 {
   
-background-image:url("bg.png");
+background-image:url("http://www.albany.edu/~gh445682/dog/bg.png");
 background-repeat:repeat;
 }
 #sideBar {
@@ -83,12 +83,12 @@ ev.target.appendChild(document.getElementById(data));
 <body>
 <div class="container">
   <div id="header">
-    <p><img src="/images/header.png" alt="header" width="842" height="93" border="0">
+    <p><img src="http://www.albany.edu/~gh445682/dog/header.png" alt="header" width="842" height="93" border="0">
     </p>
   </div>
   <div id="sideBar">
-    <p><img src="/images/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
-    <p><img src="/images/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
+    <p><img src="http://www.albany.edu/~gh445682/dog/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
+    <p><img src="http://www.albany.edu/~gh445682/dog/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
         <area shape="rect" coords="10,83,197,165" href="germanshephard.html">
         <area shape="rect" coords="10,164,197,244" href="labret.html">
@@ -103,7 +103,7 @@ ev.target.appendChild(document.getElementById(data));
   </div>
   <div id="Content">
   
-  <p>Which dog out of the Amazing A's favorite dogs is your favorite dog? Drag and drop below!</p>
+  <h2>Which dog out of the Amazing A's favorite dogs is your favorite dog? Drag and drop below!</h2>
 
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 <br>
@@ -114,7 +114,9 @@ ev.target.appendChild(document.getElementById(data));
 <img src="/images/Amazing_A/dog5.jpeg" name="drag5" width="200" height="200" hspace="100" vspace="20" id="drag5" draggable="true" ondragstart="drag(event)">
   
   </div>
+  
  
 </div>
 </body>
 </html>
+
