--- a/Teams/Amazing-As/Dog Website/cockerspaniel.html
+++ b/Teams/Amazing-As/Dog Website/cockerspaniel.html
@@ -3,18 +3,22 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Amazing A's Dogs</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+<link rel="stylesheet" type="text/css" href="style.css">
+<style type="text/css">
+.container #Content figure figcaption {
+	color: #FFF;
+}
+</style></head>
 
 <body>
 <div class="container">
   <div id="header">
-    <p><img src="/images/header.png" alt="header" width="842" height="93">
+    <p><img src="http://www.albany.edu/~gh445682/dog/header.png" alt="header" width="842" height="93">
     </p>
   </div>
   <div id="sideBar">
-    <p><img src="/images/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
-    <p><img src="/images/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
+    <p><img src="http://www.albany.edu/~gh445682/dog/bone.png" alt="bone" width="167" height="73" hspace="20"></p>
+    <p><img src="http://www.albany.edu/~gh445682/dog/bucket.png" alt="bucket" width="208" height="453" border="0" usemap="#Map">
       <map name="Map">
         <area shape="rect" coords="10,83,197,165" href="germanshephard.html" alt="German Link">
         <area shape="rect" coords="10,164,197,244" href="Labrador Retriever.html" alt="Lab Link">
@@ -29,12 +33,12 @@
   <div id="Content">
     <h1> Fun Facts about Cocker Spaniel's: </h1>
     <ul>
-      <li><span dir="LTR"> </span>There are two branches of cocker’s; the American and English</li>
+      <li><span dir="LTR"> </span>There are two branches of cocker's; the American and English</li>
       <li><span dir="LTR"> </span>All American dogs are said to originiate from Obo II while his father is the modern sire of the English breed.</li>
       <li><span dir="LTR"> </span>Prone to ear problems from pendulous ears</li>
       <li><span dir="LTR"> </span>Bread initially to hunt squirrels or as bird retrievers </li>
     </ul>
-	
+
 	<video width="320" height="240" controls autoplay="autoplay">
 		<source src="/videos/cocker.mp4" type="video/mp4">
 		Your browser does not support the video tag.
@@ -45,8 +49,10 @@
 	that make excellent pets.  My dog used to be energetic which was great as kids, we would play with him for hours. Now that he is older, he has become
 	a quiet and lazy lap dog which suits my parents lifestyle perfectly.</article></p>
 	<figure><img src="https://dl.dropbox.com/u/23281901/cocker_pic.jpg" alt="Cocker Spaniel" />
-	<figcaption>This is belived to be the main Sire to all modern American Cocker Spaniels</figcaption></figure>
-	
+	<figcaption>
+	  <p>This is belived to be the main Sire to all modern American Cocker Spaniels</p>
+</figcaption></figure>
+
     
   </div>
  
