Remove stray </b> tag

--- a/Teams/Eclectic-A-Team/Portfolios/Cody/cody_work.html
+++ b/Teams/Eclectic-A-Team/Portfolios/Cody/cody_work.html
@@ -10,7 +10,7 @@
 	<body id="work">
 		<div id="container">  
 			<nav>
-				<a href="cody_index.html">Home</a></b>
+				<a href="cody_index.html">Home</a>
 				<b><a href="cody_work.html">Work Experience</a></b>
 				<a href="cody_skills.html">Skills</a>
 			</nav>
