--- a/Teams/Amazing-As/Dog Website/pitbull.html
+++ b/Teams/Amazing-As/Dog Website/pitbull.html
@@ -75,7 +75,7 @@ background-repeat:repeat;
     <p>&nbsp;</p>
   </div>
   <div id="Content">
-    <figure><img src="/images/rio.jpg" width="320" height="240">
+    <figure><img src="" width="320" height="240">
     <figcaption>
 	  <p>Picture of my Shih Tzu/Poodle mix named Rio.</p>
    </figcaption>
@@ -98,7 +98,7 @@ background-repeat:repeat;
     <br>
     <br>
     <audio controls>
-    <source src="/sounds/shihtzu.wav" type="audio/wav">
+    <source src="" type="audio/wav">
      Your browser does not support the audio element.
     </audio>
     
