--- a/Teams/Amazing-As/Dog Website/pitbull.html
+++ b/Teams/Amazing-As/Dog Website/pitbull.html
@@ -77,7 +77,7 @@ background-repeat:repeat;
   <div id="Content">
     <figure><img src="" width="320" height="240">
     <figcaption>
-	  <p>Picture of my Shih Tzu/Poodle mix named Rio.</p>
+	  <p>Picture of a Pitbull</p>
    </figcaption>
    </figure>
     <h1> Fun Facts about Shih Tzu: </h1>
